--- a/frontEnd/src/Components/ToursList/TourDetails.css
+++ b/frontEnd/src/Components/ToursList/TourDetails.css
@@ -79,7 +79,7 @@
       right: 2em;
       /* width: 30%; */
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
       gap: 1em;
     }
