--- a/frontEnd/src/styles/Home.css
+++ b/frontEnd/src/styles/Home.css
@@ -35,7 +35,7 @@
     border-radius: 20px 120px 0 0 ;
     text-align: center;
     font-weight: 400;
- 
+  font-family: "Poppins";
     
 }
 .booking-block{
@@ -65,7 +65,6 @@
     background: rgba(255, 255, 255, 0.929);
     display: grid;
     grid-template-columns: 1.1fr 1.2fr 1.1fr 0.7fr;
-
     border-radius: 20px;
 }
 .booking-box label {
@@ -92,6 +91,7 @@
   grid-template-rows: 35% 35%;
   align-items:center;
   margin: 20px 0 0 20px; 
+  backdrop-filter: blur(10px);
 }
   .booking-icons {
     grid-row: 1/3;
@@ -162,6 +162,9 @@
     font-size: 1rem;
     max-width: 80%;
 }
+.home-floating{
+  display: block;
+}
 .floating-imges{
     position: absolute;
     z-index: 1;
@@ -193,7 +196,8 @@
 }
 .img-drn{
    top: 100px;
-   right: 190px;
+   right: 100px;
+   z-index: -1;
    pointer-events: none !important;
 }
 .img-durbu{
@@ -291,11 +295,7 @@
   .tour-pagination-next:hover {
   color: #000;
   cursor: pointer;
-  }
-  
- 
-
- 
+  } 
 .tour-results {
   margin: 2rem auto;
   display: flex;
@@ -346,7 +346,6 @@
   justify-content: center;
   gap: 1.5rem;
   margin: 1rem 0;
-  cursor: pointer;
 }
 
 .pagination-card-container {
@@ -391,6 +390,8 @@
   height: 100%;
   overflow: hidden;
   border-radius: 10px;
+  /* position: relative;
+  z-index: 2; */
 }
 
 /* Image fills the card */
@@ -409,10 +410,13 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(100, 93, 93, 0.4); /* 40% black */
+  background: rgba(100, 93, 93, 0.4); 
+  /* background: rgba(0, 0, 0, 0.4); */
   z-index: 1;
   border-radius: 10px;
+  pointer-events: none;
 }
+
 
 /* Text centered on top of overlay */
 .card-front-text {
@@ -423,6 +427,7 @@
   transform: translate(-50%, -50%);
   text-align: center;
   color: white;
+  text-shadow: #fff 1px 0 10px;
 }
 
 .card-front-text h3 {
@@ -444,6 +449,8 @@
     font-size: 1rem;
     font-weight: 600;
     color: #ffd;
+      position: relative;
+      z-index: 10; /* higher than overlay */
 }
 .flip-card-back {
   background: #339AF0;
@@ -454,4 +461,17 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+    z-index: 3;
+    pointer-events: auto;
+}
+@media (max-width: 768px) {
+  .booking-form {
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+  }
+
+  .search-btn {
+    width: 100%;
+  }
 }
