--- a/frontEnd/src/styles/TourDetails.css
+++ b/frontEnd/src/styles/TourDetails.css
@@ -13,7 +13,7 @@
     align-items: center;
     height: 600px;
     text-align: center;
-    padding: 1.8em 0 0 0;
+    padding: 0;
 }
 .custom-slide-image {
     text-align: center;
@@ -25,7 +25,6 @@
                 0 4px 6px -4px rgba(0, 0, 0, 0.1); /* Equivalent to shadow-lg */
   }
   .details-title{
-    
     font-size: 2rem;
     padding: 1em  1em 0 1em;
     color: #f08c00;
@@ -36,7 +35,7 @@
   .swiper-button-next {
     border-radius: 50%;
     transition: all 0.3s ease;
-    margin: 10em;
+    margin: 6em;
     color: #000;
   }
   
@@ -57,6 +56,7 @@
   
   .swiper-pagination-bullet-active {
     background: #007aff; /* active color */
+    border: 1px solid #fff;
   }
   .detail-crud{
     width: 80%;
@@ -103,7 +103,7 @@
 
   }
   .detail-box,.detail-description{
-    width: 30%;
+    width: 40%;
     min-height: 25%;
     min-height: auto 0;
     display: flex;
@@ -133,7 +133,7 @@
     list-style: none;
   }
   .detail-description{
-    width: 70%;
+    width: 80%;
     display: flex;
     justify-content: space-around;
     min-height: auto;
