--- a/frontEnd/src/styles/BookingPage.css
+++ b/frontEnd/src/styles/BookingPage.css
@@ -5,7 +5,7 @@
   max-width: 1400px;
   text-align: center;
   overflow: hidden;
-  padding: 5em 0 1em 0;
+  padding: 3em 0 1em 0;
 }
 .booking-area{
   width: 90%;
@@ -21,6 +21,7 @@
     background-color: #ffffff;
     border: 10px solid #f1f3f5;
     padding: 2em;
+    border-radius: 15px;
   }
   
   .booking-title {
