--- a/frontEnd/src/styles/ManageBookings.css
+++ b/frontEnd/src/styles/ManageBookings.css
@@ -28,8 +28,7 @@
   
   /* ✅ Action buttons */
   .approve-btn,
-  .reject-btn,
-  .booking-approved{
+  .reject-btn{
     margin: 0 5px;
     padding: 6px 12px;
     border: none;
@@ -54,7 +53,8 @@
     background-color: #e67700;
   }
  .booking-approved{
-    background-color: #339af0;
+    color: #339af0;
+    font-weight: bold;
  }
  .status-pending {
   color: #f03e3e;
