--- a/frontEnd/src/styles/MyBookings.css
+++ b/frontEnd/src/styles/MyBookings.css
@@ -43,7 +43,7 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
     border-radius: 12px;
   }
-  .booking-img img{
+  .mybooking-img img{
     width: 30%;
     height: 20vh;
   }
