--- a/frontEnd/src/styles/ManageBookings.css
+++ b/frontEnd/src/styles/ManageBookings.css
@@ -28,7 +28,8 @@
   
   /* ✅ Action buttons */
   .approve-btn,
-  .reject-btn{
+  .reject-btn,
+  .delete-btn {
     margin: 0 5px;
     padding: 6px 12px;
     border: none;
@@ -56,11 +57,17 @@
     color: #339af0;
     font-weight: bold;
  }
- .status-pending {
+ .status-pending{
   color: #f03e3e;
   font-weight: bold;
 }
-
+.delete-btn {
+  background-color: #f03e3e;
+  font-weight: bold;
+}
+.delete-btn:hover{
+  background-color: #c92a2a;
+}
 .done-text {
   color: #444;
   font-weight: 600;
