--- a/frontEnd/src/styles/AdminSettings.css
+++ b/frontEnd/src/styles/AdminSettings.css
@@ -1,7 +1,17 @@
+.settings-container{
+  width: 100%;
+  min-height: 90vh; /* fills screen at least */
+  height: auto;      /* allows content to grow */
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 20px; 
+}
 .admin-settings {
+  text-align: center;
     max-width: 500px;
-    margin: 40px auto;
-    padding: 20px;
+    margin: 13em auto;
+    padding: 3em;
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
@@ -10,6 +20,7 @@
   
   .admin-settings h2 {
     margin-bottom: 20px;
+    padding: 0;
   }
   
   .admin-settings label {
