feat(UserIcon): add multilingual support and fix avatar/register modal states

--- a/frontEnd/src/styles/Header.css
+++ b/frontEnd/src/styles/Header.css
@@ -76,21 +76,25 @@ padding: 0.5rem;
   
   .menu-dropdown {
     position: absolute;
-    top: 5em;
-    right: 3em;
-    padding: 1rem;
+    top: 3em;
+    right: 0;
     background-color: white;
     border-radius: 10px;
     box-shadow: hsla(28, 76%, 55%, 0.35) 0px 5px 15px;
-    padding: 10px;
+    padding: 2em 0;
+    margin: 2em;
     z-index: 100;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    min-width: 400px;     
+    max-width: 800px;
   }
   
   .menu-links {
     display: block;
+    display: flex;
+    align-items: center;
     padding: 0.5rem 2rem;
     text-decoration: none;
     transition: background 0.3s;
