--- a/frontEnd/src/styles/AboutUs.css
+++ b/frontEnd/src/styles/AboutUs.css
@@ -91,7 +91,7 @@
     line-height: 30px;
     padding: 20px 0 0 30px;
 }
-.resours-block{
+/* .resours-block{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -135,4 +135,4 @@
     font-weight: 600;
     font-family: "Poppins";
     line-height: 2;
-}
+} */
