--- a/frontEnd/src/styles/AdminDashboard.css
+++ b/frontEnd/src/styles/AdminDashboard.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 .admin-dashboard {
     width: 100%;
-    min-height: 100vh; /* fills screen at least */
-    height: auto;      /* allows content to grow */
+    min-height: 100vh; 
+    height: auto;     
     font-family: "Poppins", sans-serif;
     text-align: center;
-    overflow-y: auto;  /* allows scrolling when window is short */
+    overflow-y: auto;  
     box-sizing: border-box;
-    padding: 20px;     /* some breathing space */
+    padding: 20px;    
   }
   
 .admin-img{
