--- a/frontEnd/src/styles/LandingPage.css
+++ b/frontEnd/src/styles/LandingPage.css
@@ -157,13 +157,12 @@
 .floating-container {
   position: relative;
   width: 100%;
-  max-width: 1200px; /* Limit container width */
+  max-width: 1200px; 
   margin: 0 auto;
-  height: 600px; /* Height of floating area */
+  height: 600px; 
   overflow: hidden;
 }
 
-/* Base floating image settings */
 .floating-imges {
   position: absolute;
   z-index: 1;
@@ -176,7 +175,6 @@
   100% { transform: translateY(0); }
 }
 
-/* Sizes for individual images */
 .img-balon  { max-width: 15%; top: 9%; right: 5%; }
 .img-camera { max-width: 10%; top: 15%; left: 5%; }
 .img-coffee { max-width: 8%; top: 21%; right: 17%; }
@@ -367,11 +365,8 @@
   height: 100%;
   overflow: hidden;
   border-radius: 10px;
-  /* position: relative;
-  z-index: 2; */
 }
 
-/* Image fills the card */
 .card-image {
   width: 100%;
   height: 100%;
@@ -379,8 +374,6 @@
   display: block;
   border-radius: 10px;
 }
-
-/* Overlay for opacity/dimming */
 .dark-overlay {
   position: absolute;
   top: 0;
@@ -388,14 +381,10 @@
   width: 100%;
   height: 100%;
   background: rgba(100, 93, 93, 0.4); 
-  /* background: rgba(0, 0, 0, 0.4); */
   z-index: 1;
   border-radius: 10px;
   pointer-events: none;
 }
-
-
-/* Text centered on top of overlay */
 .card-front-text {
   position: absolute;
   z-index: 2;
@@ -406,28 +395,25 @@
   color: white;
   text-shadow: #fff 1px 0 10px;
 }
-
 .card-front-text h3 {
   font-size: 1.4rem;
   font-weight: 600;
   margin-bottom: 0.5rem;
   text-transform: uppercase;
 }
-
 .card-front-text p {
   font-size: 1rem;
   font-weight: 400;
   margin: 0;
   padding: 0.3em;
 }
-
 .pagination-link{
   text-decoration: none;
     font-size: 1rem;
     font-weight: 600;
     color: #ffd;
       position: relative;
-      z-index: 10; /* higher than overlay */
+      z-index: 10;
 }
 .flip-card-back {
   background: #339AF0;
@@ -451,7 +437,6 @@
   margin-bottom: 90px;
 }
 .resours-mainTheme{
-  /* color: #3bc9db; */
   color:  #868e96;
   font-size: 2rem;
   font-weight: 600;
@@ -460,13 +445,11 @@
  text-align: center;
 }
 .resours-box{
-  /* background-color:#f1f3f5; */
   background: #f8f9fa;
   width: 370px;
   height: 250px;
   border-radius: 20px;
   padding: 20px;
-  /* box-shadow: 1px 0  3px   #3bc9db; */
   line-height: 2;
   text-align: center;
 }
@@ -479,7 +462,6 @@
 }
 
 .resours-theme{
-  /* color:#3bc9db; */
   color:  #868e96;
   font-size: 1rem;
   font-weight: 600;
@@ -505,3 +487,4 @@
     width: 100%;
   }
 }
+
